syntax = "proto3";
package pb;
option go_package = "./pb";

message LocationRequest {
  Location myLocation = 1;
  repeated Location locations = 2;
}
  
message Location {
  int64 id = 1;
  float lat = 2;
  float lng = 3;
}

service LocationService {
  rpc FindClosest(LocationRequest) returns (Location);
}